Finalização da página sobre.

--- a/sobre.html
+++ b/sobre.html
@@ -9,14 +9,14 @@
   <!-- SEO -->
   <meta http-equiv="content-language" content="pt-BR">
   <meta name="author" content="Francisco de Paula (euChico)">
-  <meta name="description" content="{ DESCRIÇÃO }">
+  <meta name="description" content="Francisco de Paula trilhou trajetória não linear até começar a formação em Análise e Desenvolvimento de Sistemas, compartilhando a jornada como programador Jr.">
   <meta name="creator" content="Francisco de Paula (euChico)">
   <meta name="robots" content="index, follow">
 
   <meta property="og:locale" content="pt_BR">
   <meta property="og:type" content="website">
   <meta property="og:title" content="euChico - Francisco de Paula">
-  <meta property="og:description" content="{ DESCRIÇÃO }">
+  <meta property="og:description" content="Francisco de Paula trilhou trajetória não linear até começar a formação em Análise e Desenvolvimento de Sistemas, compartilhando a jornada como programador Jr. ">
   <meta property="og:url" content="https://euchico.github.io">
   <meta property="og:site_name" content="euChico">
   <meta property="og:image" content="{ LINK IMAGEM }">
@@ -28,7 +28,7 @@
   <meta name="twitter:site" content="@euchicodev">
   <meta name="twitter:creator" content="@euchicodev">
   <meta name="twitter:title" content="euChico - Francisco de Paula">
-  <meta name="twitter:description" content="{ DESCRIÇÃO }">
+  <meta name="twitter:description" content="Francisco de Paula trilhou trajetória não linear até começar a formação em Análise e Desenvolvimento de Sistemas, compartilhando a jornada como programador Jr. ">
   <meta name="twitter:image" content="{ LINK IMAGEM }">
   <!-- / SEO -->
   <!-- / METAS -->
@@ -111,11 +111,11 @@
     </div>
 
     <p class="resumo">
-      Meu nome é Francisco de Paula, tenho 33 anos e moro na Baixada do Rio de Janeiro. Minha trajetória não segue uma linha reta. Iniciei o curso de Ciência da Computação, mas não o concluí. Atualmente, estou me formando em Licenciatura em Matemática e Análise e Desenvolvimento de Sistemas, e também cultivo a arte como hobby. Minha frase preferida, de Saint-Exupéry, "Quando a gente anda sempre em frente, não pode ir muito longe", reflete a minha jornada.
+      Meu nome é <a href="/curriculo" target="_self">Francisco de Paula</a>, tenho 33 anos e moro na Baixada do Rio de Janeiro. Minha trajetória não segue uma linha reta. Iniciei o curso de Ciência da Computação, mas não o concluí. Atualmente, estou me formando em Licenciatura em Matemática e Análise e Desenvolvimento de Sistemas, e também cultivo a arte como paixão. Minha frase preferida, de Saint-Exupéry, "Quando a gente anda sempre em frente, não pode ir muito longe", reflete a minha jornada.
       <br><br>
-      Desde pequeno desenho e me interesso por arte, chegando a pensar em seguir no Desenho Industrial. Contudo, a escolha para o meu primeiro curso superior foi Ciência da Computação, sempre fui apaixonado por jogos e tecnologia, a escolha fez muito sentido no momento. Foi um ótimo curso, mas esse período passei por alguns pontos baixos que resultaram no trancamento da graduação. Posteriormente, iniciei a Licenciatura em Matemática, um novo curso, em uma nova faculdade, a combinação perfeita das áreas de humanas com a Educação e exatas com a Matemática.
+      Desde a infância, tenho interesse por arte, tendo cogitado seguir na área do Desenho Industrial. Porém, escolhi cursar Ciência da Computação como primeira graduação, visto que sou aficionado por tecnologia e jogos. Embora tenha sido um curso excelente, alguns obstáculos surgiram e acabaram dificultando minha permanência na UERJ. Atualmente, estou cursando Licenciatura em Matemática no IFRJ, unindo as áreas humanas da Educação com a exatidão da Matemática, em uma nova faculdade e curso.
       <br><br>
-      Nunca deixei a programação e constantemente tento utilizar os conhecimentos na minha vida, acadêmica e cotidiana. Isso fez retornar o estudo e o desejo que encontrar novas oportunidades com os códigos. Esse site é um espaço para compartilhar minha trajetória de estudos e apresentar projetos, pessoais e profissionais. Outros detalhes e informações estão descritos no <a href="/curriculo" target="_self"><strong>Currículo</strong></a>.
+      Mesmo depois de ter deixado o curso de Ciência da Computação, nunca abandonei a programação e continuamente aplicava meus conhecimentos na vida acadêmica e cotidiana. Isso me inspirou a retornar aos estudos e, atualmente, estou cursando Análise e Desenvolvimento de Sistemas e recomeçando minha carreira como programador Jr. Este site foi criado para compartilhar minha "nova" trajetória de estudos e projetos desenvolvidos nesse processo.
     </p>
   </section>
   <!-- / SEÇÃO: BIOGRAFIA -->
@@ -206,28 +206,30 @@
   <!-- / PROJETOS-->
 
   <!-- SEÇÃO: ADS -->
-  <div class="fundo-secao-ads py-5">
+  <div class="fundo-secao-ads d-none d-md-block py-5">
     <section id="secao-ads" class="container text-center">
-      <h3>Matemática</h3>
-      <hr class="hr-curto mb-4">
+      <h3>Análise e Desenvolvimento de Sistemas</h3>
+      <div class="separador-curto"></div>
 
       <p class="text-left w-75 mx-auto secao-ads-resumo">
-        "O curso de Matemática, Licenciatura, objetiva a formação do Professor de Matemática para os Anos Finais do Ensino Fundamental, Ensino Médio e Educação Profissional; possibilitando ao graduando a aquisição de amplo domínio teórico, experimental e pedagógico da Matemática, além do desenvolvimento de postura investigativa, ética, crítica e capaz de produzir e disseminar conhecimentos científicos e tecnológicos" (IFRJ).
+        "O curso de tecnólogo em Análise e Desenvolvimento de Sistemas é uma formação de nível superior voltada para a área de tecnologia da informação. 
         <br><br>
-        Essa definição está totalmente ligada as características necessárias em várias áreas da vida, e para programação não é diferente. A Matemática é algo fundamental para Computação e acredito que construí (e continuo construindo) uma boa base analítica para o Desenvolvimento Web.
+        O objetivo do curso é formar profissionais aptos a desenvolver, implementar e gerenciar sistemas de informação em diversas áreas, como comércio, indústria, serviços e governo. Durante o curso, o aluno adquire conhecimentos em linguagens de programação, banco de dados, análise e modelagem de sistemas, redes de computadores, entre outras áreas. 
+        <br><br>
+        Além disso, o curso enfatiza o desenvolvimento de habilidades interpessoais, como liderança, trabalho em equipe e comunicação, fundamentais para o mercado de trabalho. O tecnólogo em Análise e Desenvolvimento de Sistemas está preparado para atuar em diversas posições, desde programador até gerente de projetos de TI, em empresas de todos os portes." — ChatGPT
       </p>
 
-      <a  href="https://portal.ifrj.edu.br/index.php" target="_blank">
-        <img class="mt-4" src="assets/img/icon-ifrj.png" alt="Logo Branco IFRJ">
+      <a  href="https://www.uninter.com/graduacao-ead/curso-analise-e-desenvolvimento-de-sistemas/" target="_blank">
+        <img class="mt-4" src="assets/img/icone-ads.png" alt="Logo Branco IFRJ">
       </a>
     </section>
   </div>
-  <!-- / SEÇÃO: MATEMÁTICA -->
+  <!-- / SEÇÃO: ADS -->
 
   <!-- SEÇÃO: ARTE -->
-  <section id="sec-art" class="container text-center">
+  <section id="sec-art" class="container text-center py-md-5 pt-0">
     <h3>Arte</h3>
-    <hr class="hr-curto mb-4">
+    <div class="separador-curto"></div>
 
     <div class="social">          
       <a href="https://www.instagram.com/euchicoart/" target="_blank">
@@ -251,7 +253,7 @@
 
   <!-- RODAPÉ -->
   <footer class="container">
-    <hr class="hr-padrao">
+    <div class="separador-longo"></div>
     
     <div class="row justify-content-center">
       <div class="col-sm-6 col-12 text-center">
