--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
   <meta property="og:description" content="{ DESCRIÇÃO }">
   <meta property="og:url" content="https://euchico.github.io">
   <meta property="og:site_name" content="euChico">
-  <meta property="og:image" content="{ LINK IMAGEM }">
+  <meta property="og:image" content="https://raw.githubusercontent.com/euchico/euchico.github.io/master/assets/img/euchico-perfil-principal.jpg">
   <meta property="og:image:width" content="300">
   <meta property="og:image:height" content="300">
 
@@ -29,7 +29,7 @@
   <meta name="twitter:creator" content="@euchicodev">
   <meta name="twitter:title" content="euChico - Francisco de Paula">
   <meta name="twitter:description" content="{ DESCRIÇÃO }">
-  <meta name="twitter:image" content="{ LINK IMAGEM }">
+  <meta name="twitter:image" content="https://raw.githubusercontent.com/euchico/euchico.github.io/master/assets/img/euchico-perfil-principal.jpg">
   <!-- / SEO -->
   <!-- / METAS -->
 
