Correção geral na página de portfolio

--- a/sobre.html
+++ b/sobre.html
@@ -137,7 +137,7 @@
             análises estatísticas e levantamentos das principais loterias brasileiras, 
             utilizando conhecimentos adquiridos em estudos diários de programação em C# com Orientação a Objetos.  
           </p>
-          <a class="projeto-link" href="https://github.com/euchico/projeto-green" target="_blank"> <span>Veja Mais</span> <i class="fas fa-angle-right"></i></a>
+          <a class="projeto-link" href="https://github.com/euchico/projeto-green" target="_blank"><span>Veja Mais</span><i class="fas fa-angle-right"></i></a>
         </div>
       </div>
     </div>
@@ -157,7 +157,7 @@
             O projeto tem como objetivo atender às minhas necessidades pessoais de organização financeira de forma eficiente, 
             utilizando tecnologias avançadas, padrões de projeto e boas práticas recomendadas pelo mercado.
           </p>
-          <a class="projeto-link" href="https://github.com/euchico/projeto-sem-planilha" target="_blank"> <span>Veja Mais</span> <i class="fas fa-angle-right"></i></a>
+          <a class="projeto-link" href="https://github.com/euchico/projeto-sem-planilha" target="_blank"><span>Veja Mais</span><i class="fas fa-angle-right"></i></a>
         </div>
       </div>
     </div>
@@ -177,7 +177,7 @@
             Uma plataforma de livro-jogo como objetivo fornecer uma solução para jogadores e criadores de aventuras solo de RPG, 
             permitindo a jogabilidade interativa de aventuras e compartilhamento com outros jogadores. 
           </p>
-          <a class="projeto-link" href="https://github.com/euchico/projeto-aventura-solo" target="_blank"><span>Veja Mais</span> <i class="fas fa-angle-right"></i></a>
+          <a class="projeto-link" href="https://github.com/euchico/projeto-aventura-solo" target="_blank"><span>Veja Mais</span><i class="fas fa-angle-right"></i></a>
         </div>
       </div>
     </div>
@@ -197,7 +197,7 @@
             O projeto de estudo que visa desenvolver jogos 2D em C# utilizando a plataforma Unity. 
             É uma oportunidade de aplicar conceitos de programação em um cenário divertido e diferente do que estou habituado.  
           </p>
-          <a class="projeto-link" href="https://github.com/euchico/projeto-kojima" target="_blank"><span>Veja Mais</span> <i class="fas fa-angle-right"></i></a>
+          <a class="projeto-link" href="https://github.com/euchico/projeto-kojima" target="_blank"><span>Veja Mais</span><i class="fas fa-angle-right"></i></a>
         </div>
       </div>
     </div>
@@ -227,7 +227,7 @@
   <!-- / SEÇÃO: ADS -->
 
   <!-- SEÇÃO: ARTE -->
-  <section id="sec-art" class="container text-center py-md-5 pt-0">
+  <section id="sec-arte" class="container text-center py-md-5 pt-0">
     <h3>Arte</h3>
     <div class="separador-curto"></div>
 
