Finalização da estrutura geral da página

--- a/portfolio.html
+++ b/portfolio.html
@@ -136,8 +136,7 @@
         <div class="row border rounded overflow-hidden mb-4 h-md-250 position-relative g-0">
           <div class="col d-flex flex-column p-4">
             <div>
-              <span class="d-inline-block mb-2 portfolio-categoria categoria-fullstack">full stack</span>
-              <span class="d-inline-block mb-2 portfolio-categoria categoria-dotnet">.net</span>
+              <span class="d-inline-block mb-2 portfolio-categoria categoria-python">python</span>
             </div>
             <h3 class="portfolio-titulo">Green</h3>
             <p class="card-text mb-auto portfolio-resumo">Projeto com objetivo realizar sorteios, análises estatísticas e levantamentos de loterias.</p>
@@ -254,7 +253,7 @@
     </div>
   </footer>
   <!-- / RODAPÉ -->
-  
+
 
   <!-- SCRIPTS -->
   <script type="text/javascript" src="assets/js/bootstrap.bundle.min.js"></script>
