Correções de textos da home

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   <!-- SEO -->
   <meta http-equiv="content-language" content="pt-BR">
   <meta name="author" content="Francisco de Paula (euChico)">
-  <meta name="description" content="Compartilhando minha trajetória profissional, projetos pessoais e estudos de desenvolvimento.">
+  <meta name="description" content="Francisco de Paula (euChico) - Compartilhando meus estudos de programação, projetos pessoais e trajetória profissional.">
   <meta name="creator" content="Francisco de Paula (euChico)">
   <meta name="robots" content="index, follow">
 
   <meta property="og:locale" content="pt_BR">
   <meta property="og:type" content="website">
   <meta property="og:title" content="euChico - Francisco de Paula">
-  <meta property="og:description" content="Compartilhando minha trajetória profissional, projetos pessoais e estudos de desenvolvimento.">
+  <meta property="og:description" content="Francisco de Paula (euChico) - Compartilhando meus estudos de programação, projetos pessoais e trajetória profissional.">
   <meta property="og:url" content="https://euchico.github.io">
   <meta property="og:site_name" content="euChico">
   <meta property="og:image" content="https://raw.githubusercontent.com/euchico/euchico.github.io/master/assets/img/euchico-perfil-principal.jpg">
@@ -28,7 +28,7 @@
   <meta name="twitter:site" content="@euchicodev">
   <meta name="twitter:creator" content="@euchicodev">
   <meta name="twitter:title" content="euChico - Francisco de Paula">
-  <meta name="twitter:description" content="Compartilhando minha trajetória profissional, projetos pessoais e estudos de desenvolvimento.">
+  <meta name="twitter:description" content="Francisco de Paula (euChico) - Compartilhando meus estudos de programação, projetos pessoais e trajetória profissional.">
   <meta name="twitter:image" content="https://raw.githubusercontent.com/euchico/euchico.github.io/master/assets/img/euchico-perfil-principal.jpg">
   <!-- / SEO -->
   <!-- / METAS -->
@@ -56,7 +56,7 @@
   <nav class="navbar navbar-expand-sm navbar-light">
     <div class="container">
       <a class="navbar-brand disabled">
-        <h1 class="user-select-none logo">
+        <h1 class="logo user-select-none ">
           <span>eu</span><span>Chico</span>
         </h1>
       </a>
@@ -104,7 +104,7 @@
         <h3>Programador Jr.</h3> 
         <div class="separador-curto"></div>
         <p>
-          Compartilhando minha trajetória profissional, projetos pessoais e estudos de desenvolvimento.
+          Compartilhando meus estudos de programação, projetos pessoais e trajetória profissional.
         </p>
       </div>
     </div>
@@ -119,8 +119,8 @@
     <!-- Projeto 1 -->
     <div class="projetos-inicio-linha-1 row position-relative align-items-center mb-5" data-aos="fade-right" data-aos-once="true">
       <div class="col-lg-6">
-        <img class="img-fluid d-none d-lg-block mb-2" src="assets/img/projeto/projeto-green-desktop.png" alt="{{ALT}}">
-        <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/projeto/projeto-green-mobile.png" alt="{{ALT}}">
+        <img class="img-fluid d-none d-lg-block mb-2" src="assets/img/projeto/projeto-green-desktop.png" alt="Projeto Green - euChico (Desktop)">
+        <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/projeto/projeto-green-mobile.png" alt="Projeto Green - euChico (Mobile)">
       </div>
 
       <div class="col-lg-6">
@@ -129,7 +129,7 @@
           <p class="projeto-resumo">
             O projeto tem como objetivo realizar sorteios, 
             análises estatísticas e levantamentos das principais loterias brasileiras, 
-            utilizando conhecimentos adquiridos em estudos diários de programação em C# com Orientação a Objetos.  
+            utilizando conhecimentos adquiridos em estudos diários de programação em Python e Análise de Dados.  
           </p>
           <a class="projeto-link" href="https://github.com/euchico/projeto-green" target="_blank"> <span>Veja Mais</span> <i class="fas fa-angle-right"></i></a>
         </div>
@@ -140,8 +140,8 @@
     <!-- Projeto 2 -->
     <div class="projetos-inicio-linha-1 row position-relative align-items-center mb-5" data-aos="fade-right" data-aos-once="true">
       <div class="col-lg-6">
-        <img class="img-fluid d-none d-lg-block mb-2" src="assets/img/projeto/projeto-sem-planilha-desktop.png" alt="{{ALT}}">
-        <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/projeto/projeto-sem-planilha-mobile.png" alt="{{ALT}}">
+        <img class="img-fluid d-none d-lg-block mb-2" src="assets/img/projeto/projeto-sem-planilha-desktop.png" alt="Projeto Sem Planilha - euChico (Desktop)">
+        <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/projeto/projeto-sem-planilha-mobile.png" alt="Projeto Sem Planilha - euChico (Mobile)">
       </div>
 
       <div class="col-lg-6">
@@ -149,7 +149,7 @@
           <h4 class="projeto-titulo">Projeto Sem Planilha</h4>
           <p class="projeto-resumo">
             O projeto tem como objetivo atender às minhas necessidades pessoais de organização financeira de forma eficiente, 
-            utilizando tecnologias avançadas, padrões de projeto e boas práticas recomendadas pelo mercado.
+            utilizando métodos atuais, padrões de projeto e boas práticas recomendadas pelo mercado.
           </p>
           <a class="projeto-link" href="https://github.com/euchico/projeto-sem-planilha" target="_blank"> <span>Veja Mais</span> <i class="fas fa-angle-right"></i></a>
         </div>
@@ -166,15 +166,15 @@
           <h4 class="projeto-titulo">Projeto Aventura Solo</h4>
           <p class="projeto-resumo">
             Uma plataforma de livro-jogo como objetivo fornecer uma solução para jogadores e criadores de aventuras solo de RPG, 
-            permitindo a jogabilidade interativa de aventuras e compartilhamento com outros jogadores. 
+            permitindo a jogabilidade interativa e compartilhamento com outros jogadores. 
           </p>
           <a class="projeto-link" href="https://github.com/euchico/projeto-aventura-solo" target="_blank"><span>Veja Mais</span> <i class="fas fa-angle-right"></i></a>
         </div>
       </div>
 
       <div class="col-md-6 order-1 order-md-2">
-        <img class="img-fluid d-none d-lg-block mb-2" src="assets/img/projeto/projeto-aventura-solo-desktop.png" alt="{{ALT}}">
-        <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/projeto/projeto-aventura-solo-mobile.png" alt="{{ALT}}">
+        <img class="img-fluid d-none d-lg-block mb-2" src="assets/img/projeto/projeto-aventura-solo-desktop.png" alt="Projeto Aventura Solo - euChico (Desktop)">
+        <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/projeto/projeto-aventura-solo-mobile.png" alt="Projeto Aventura Solo - euChico (Mobile)">
       </div>
     </div>
     <!-- / Projeto 3 -->
@@ -193,8 +193,8 @@
       </div>
 
       <div class="col-md-6 order-1 order-md-2">
-        <img class="img-fluid d-none d-lg-block mb-2" src="assets/img/projeto/projeto-kojima-desktop.png" alt="{{ALT}}">
-        <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/projeto/projeto-kojima-mobile.png" alt="{{ALT}}">
+        <img class="img-fluid d-none d-lg-block mb-2" src="assets/img/projeto/projeto-kojima-desktop.png" alt="Projeto Kojima - euChico (Desktop)">
+        <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/projeto/projeto-kojima-mobile.png" alt="Projeto Kojima - euChico (Mobile)">
       </div>
     </div>
     <!-- / Projeto 4 -->
@@ -212,10 +212,10 @@
           <i class="estudo-icone fas fa-book fa-2x"></i>
           <h5 class="estudo-titulo">Estudos</h5>
           <p class="estudo-resumo px-3">
-            Repositório com objetivo de compartilhar estudos em programação, incluindo cursos e exemplos práticos em ferramentas importante no meu quotidiano.
+            Repositório com objetivo de registrar e compartilhar estudos em programação, incluindo cursos e pequenos exemplos práticos realizados durante o processo.
           </p>
           <a href="https://github.com/euchico/estudos" target="_blank">
-            <button class="btn btn-dark btn-sm" href="#">Acesse</button>
+            <button class="btn btn-dark btn-sm">Acesse</button>
           </a>
         </div>
       </div>
@@ -230,7 +230,7 @@
             Repositório dedicado ao compartilhamento desafios de programação e projetos completos para ilustrar a aplicação prática de conceitos de desenvolvimento.
           </p>
           <a href="https://github.com/euchico/desafios" target="_blank">
-            <button class="btn btn-dark btn-sm" href="#">Acesse</button>
+            <button class="btn btn-dark btn-sm">Acesse</button>
           </a>
         </div>
       </div>
@@ -245,7 +245,7 @@
             Repositório de anotações e resumos para armazenar de maneira organizada e acessível os estudos realizados durante cursos e projetos de programação.
           </p>
           <a href="https://github.com/euchico/resumos" target="_blank">
-            <button class="btn btn-dark btn-sm" href="#">Acesse</button>
+            <button class="btn btn-dark btn-sm">Acesse</button>
           </a>
         </div>
       </div>
@@ -268,15 +268,15 @@
 
         <div class="social">     
           <a class="d-inline-block" href="http://github.com/euchico" target="_blank">
-            <img src="assets/img/social-github.png" alt="GitHub: @euchico">
+            <img src="assets/img/social-github.png" alt="ícone GitHub Cinza">
           </a>
 
           <a class="d-inline-block" href="http://www.linkedin.com/in/euchico" target="_blank">
-            <img src="assets/img/social-linkedin.png" alt="LinkedIn: @euchico">
+            <img src="assets/img/social-linkedin.png" alt="ícone LinkedIn Cinza">
           </a>
           
           <a class="d-inline-block" href="http://instragram.com/euchicodev" target="_blank">
-            <img src="assets/img/social-instagram.png" alt="Instram: @euchicodev">
+            <img src="assets/img/social-instagram.png" alt="ícone Instagram Cinza">
           </a>
         </div>
       </div>
