--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
     <nav class="navbar navbar-expand-sm navbar-light">
       <div class="container">
         <a class="navbar-brand" href="/">
-          <h1 class="user-select-none logo">
+          <h1 class="logo user-select-none">
             <span>eu</span><span>Chico</span>
           </h1>
         </a>
