Atualização visual do site

--- a/curriculo.html
+++ b/curriculo.html
@@ -41,13 +41,15 @@
   <!-- / ESTILOS -->
 
   <!-- FONTE -->
-  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&family=Poppins:wght@200;400&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&family=Poppins:wght@200;400&display=swap" rel="stylesheet">
   <!-- SCRIPTS -->
   <script src="https://kit.fontawesome.com/a637670de9.js" crossorigin="anonymous" SameSite="none Secure"></script>
   <!-- SCRIPTS -->
   <!-- / FONTE -->
 
-  <link rel="icon" href="{ LINK }">
+  <link rel="icon" href="favicon.ico">
   <title>euChico - Currículo</title>
 </head>
 
@@ -102,7 +104,7 @@
       <!-- CARTÃO -->
       <div class="col-lg-5 cartao">
         <div class="cartao-apresentacao text-center py-5">
-          <img class="img-perfil img-fluid" src="assets/img/euchico-perfil-principal.jpg" alt="Avatar euChico">
+          <img class="img-perfil img-fluid" src="assets/img/euchico-perfil-curriculo.jpg" alt="Avatar euChico">
 
           <h2 class="mt-3">Francisco de Paula</h2>
           <h3>Programador Jr.</h3>
