--- a/sobre.html
+++ b/sobre.html
@@ -19,7 +19,7 @@
   <meta property="og:description" content="Francisco de Paula trilhou trajetória não linear até começar a formação em Análise e Desenvolvimento de Sistemas, compartilhando a jornada como programador Jr. ">
   <meta property="og:url" content="https://euchico.github.io">
   <meta property="og:site_name" content="euChico">
-  <meta property="og:image" content="https://raw.githubusercontent.com/euchico/euchico.github.io/master/assets/img/euchico-perfil-principal.jpg">
+  <meta property="og:image" content="https://raw.githubusercontent.com/euchico/euchico.github.io/master/assets/img/euchico-perfil.jpg">
   <meta property="og:image:width" content="300">
   <meta property="og:image:height" content="300">
 
@@ -29,7 +29,7 @@
   <meta name="twitter:creator" content="@euchicodev">
   <meta name="twitter:title" content="euChico - Francisco de Paula">
   <meta name="twitter:description" content="Francisco de Paula trilhou trajetória não linear até começar a formação em Análise e Desenvolvimento de Sistemas, compartilhando a jornada como programador Jr. ">
-  <meta name="twitter:image" content="https://raw.githubusercontent.com/euchico/euchico.github.io/master/assets/img/euchico-perfil-principal.jpg">
+  <meta name="twitter:image" content="https://raw.githubusercontent.com/euchico/euchico.github.io/master/assets/img/euchico-perfil.jpg">
   <!-- / SEO -->
   <!-- / METAS -->
 
@@ -41,13 +41,15 @@
   <!-- / ESTILOS -->
 
   <!-- FONTE -->
-  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&family=Poppins:wght@200;400&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&family=Poppins:wght@200;400&display=swap" rel="stylesheet">
   <!-- SCRIPTS -->
   <script src="https://kit.fontawesome.com/a637670de9.js" crossorigin="anonymous" SameSite="none Secure"></script>
   <!-- SCRIPTS -->
   <!-- / FONTE -->
 
-  <link rel="icon" href="{ LINK }">
+  <link rel="icon" href="favicon.ico">
   <title>euChico - Sobre</title>
 </head>
 
@@ -103,7 +105,7 @@
   <!-- SEÇÃO: BIOGRAFIA -->
   <section id="secao-biografia" class="container py-5">
     <div class="text-center">
-      <img class="img-fluid img-perfil" src="assets/img/euchico-perfil-principal.jpg" alt="Avatar euChico">
+      <img class="img-fluid img-perfil" src="assets/img/euchico-perfil-sobre.jpg" alt="Avatar euChico">
 
       <h2>Francisco de Paula</h2>
 
@@ -149,7 +151,7 @@
               <p class="projeto-resumo">
                 O projeto tem como objetivo realizar sorteios, 
                 análises estatísticas e levantamentos das principais loterias brasileiras, 
-                utilizando conhecimentos adquiridos em estudos diários de programação em C# com Orientação a Objetos.  
+                utilizando conhecimentos adquiridos em estudos diários de programação em C# e Análise de Dados.  
               </p>
               <a class="projeto-link" href="https://github.com/euchico/projeto-green" target="_blank"><span>Veja Mais</span><i class="fas fa-angle-right"></i></a>
             </div>
@@ -169,53 +171,13 @@
               <h4 class="projeto-titulo">Projeto Sem Planilha</h4>
               <p class="projeto-resumo">
                 O projeto tem como objetivo atender às minhas necessidades pessoais de organização financeira de forma eficiente, 
-                utilizando tecnologias avançadas, padrões de projeto e boas práticas recomendadas pelo mercado.
+                utilizando métodos atuais, padrões de projeto e boas práticas recomendadas pelo mercado.
               </p>
               <a class="projeto-link" href="https://github.com/euchico/projeto-sem-planilha" target="_blank"><span>Veja Mais</span><i class="fas fa-angle-right"></i></a>
             </div>
           </div>
         </div>
         <!-- / Projeto 2 -->
-
-        <!-- Projeto 3 -->
-        <div class="projetos-sobre row position-relative align-items-center mb-5" data-aos="fade-down" data-aos-once="true">
-          <div class="col-lg-6">
-            <img class="img-fluid d-none d-lg-block mb-2" src="assets/img/projeto/projeto-aventura-solo-desktop.png" alt="{{ALT}}">
-            <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/projeto/projeto-aventura-solo-mobile.png" alt="{{ALT}}">
-          </div>
-          
-          <div class="col-lg-6">
-            <div class="projeto-artigo">
-              <h4 class="projeto-titulo">Projeto Aventura Solo</h4>
-              <p class="projeto-resumo">
-                Uma plataforma de livro-jogo como objetivo fornecer uma solução para jogadores e criadores de aventuras solo de RPG, 
-                permitindo a jogabilidade interativa de aventuras e compartilhamento com outros jogadores. 
-              </p>
-              <a class="projeto-link" href="https://github.com/euchico/projeto-aventura-solo" target="_blank"><span>Veja Mais</span><i class="fas fa-angle-right"></i></a>
-            </div>
-          </div>
-        </div>
-        <!-- / Projeto 3 -->
-
-        <!-- Projeto 4 -->
-        <div id="projeto-4" class="projetos-sobre row position-relative align-items-center mb-5" data-aos="fade-down" data-aos-once="true">
-          <div class="col-lg-6">
-            <img class="img-fluid d-none d-lg-block mb-2" src="assets/img/projeto/projeto-kojima-desktop.png" alt="{{ALT}}">
-            <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/projeto/projeto-kojima-mobile.png" alt="{{ALT}}">
-          </div>
-
-          <div class="col-lg-6">
-            <div class="projeto-artigo">
-              <h4 class="projeto-titulo">Projeto Kojima</h4>
-              <p class="projeto-resumo">
-                O projeto de estudo que visa desenvolver jogos 2D em C# utilizando a plataforma Unity. 
-                É uma oportunidade de aplicar conceitos de programação em um cenário divertido e diferente do que estou habituado.  
-              </p>
-              <a class="projeto-link" href="https://github.com/euchico/projeto-kojima" target="_blank"><span>Veja Mais</span><i class="fas fa-angle-right"></i></a>
-            </div>
-          </div>
-        </div>
-        <!-- / Projeto 4 -->
       </section>
       <!-- / PROJETOS-->
 
