--- a/projeto/projeto-template.html
+++ b/projeto/projeto-template.html
@@ -41,13 +41,15 @@
   <!-- / ESTILOS -->
 
   <!-- FONTE -->
-  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&family=Poppins:wght@200;400&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&family=Poppins:wght@200;400&display=swap" rel="stylesheet">
   <!-- SCRIPTS -->
   <script src="https://kit.fontawesome.com/a637670de9.js" crossorigin="anonymous" SameSite="none Secure"></script>
   <!-- SCRIPTS -->
   <!-- / FONTE -->
 
-  <link rel="icon" href="{ LINK }">
+  <link rel="icon" href="favicon.ico">
   <title>euChico - Projeto 1</title>
 </head>
 
