--- a/sobre.html
+++ b/sobre.html
@@ -9,26 +9,26 @@
   <!-- SEO -->
   <meta http-equiv="content-language" content="pt-BR">
   <meta name="author" content="Francisco de Paula (euChico)">
-  <meta name="description" content="Francisco de Paula trilhou trajetória não linear até começar a formação em Análise e Desenvolvimento de Sistemas, compartilhando a jornada como programador Jr.">
+  <meta name="description" content="Francisco de Paula (euChico) compartilhando a sua jornada pessoal e profissional como um programador Jr., que percorreu um caminho não linear.">
   <meta name="creator" content="Francisco de Paula (euChico)">
   <meta name="robots" content="index, follow">
 
   <meta property="og:locale" content="pt_BR">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="euChico - Francisco de Paula">
-  <meta property="og:description" content="Francisco de Paula trilhou trajetória não linear até começar a formação em Análise e Desenvolvimento de Sistemas, compartilhando a jornada como programador Jr. ">
-  <meta property="og:url" content="https://euchico.github.io">
+  <meta property="og:title" content="euChico - Sobre">
+  <meta property="og:description" content="Francisco de Paula (euChico) compartilhando a sua jornada pessoal e profissional como um programador Jr., que percorreu um caminho não linear.">
+  <meta property="og:url" content="https://euchico.github.io/sobre">
   <meta property="og:site_name" content="euChico">
   <meta property="og:image" content="https://raw.githubusercontent.com/euchico/euchico.github.io/master/assets/img/euchico-perfil.jpg">
   <meta property="og:image:width" content="300">
   <meta property="og:image:height" content="300">
 
   <meta name="twitter:card" value="summary">
-  <meta name="twitter:domain" content="euchico.github.io">
+  <meta name="twitter:domain" content="euchico.github.io/sobre">
   <meta name="twitter:site" content="@euchicodev">
   <meta name="twitter:creator" content="@euchicodev">
-  <meta name="twitter:title" content="euChico - Francisco de Paula">
-  <meta name="twitter:description" content="Francisco de Paula trilhou trajetória não linear até começar a formação em Análise e Desenvolvimento de Sistemas, compartilhando a jornada como programador Jr. ">
+  <meta name="twitter:title" content="euChico - Sobre">
+  <meta name="twitter:description" content="Francisco de Paula (euChico) compartilhando a sua jornada pessoal e profissional como um programador Jr., que percorreu um caminho não linear.">
   <meta name="twitter:image" content="https://raw.githubusercontent.com/euchico/euchico.github.io/master/assets/img/euchico-perfil.jpg">
   <!-- / SEO -->
   <!-- / METAS -->
@@ -113,11 +113,11 @@
     </div>
 
     <p class="resumo">
-      Meu nome é <a href="/curriculo" target="_self">Francisco de Paula</a>, tenho 33 anos e moro na Baixada do Rio de Janeiro. Minha trajetória não segue uma linha reta. Iniciei o curso de Ciência da Computação, mas não o concluí. Atualmente, estou me formando em Licenciatura em Matemática e Análise e Desenvolvimento de Sistemas, e também cultivo a arte como paixão. Minha frase preferida, de Saint-Exupéry, "Quando a gente anda sempre em frente, não pode ir muito longe", reflete a minha jornada.
+      Meu nome é <a href="/curriculo" target="_self">Francisco de Paula</a>, tenho 33 anos e moro na Baixada Fluminense, no Rio de Janeiro.
       <br><br>
-      Desde a infância, tenho interesse por arte, tendo cogitado seguir na área do Desenho Industrial. Porém, escolhi cursar Ciência da Computação como primeira graduação, visto que sou aficionado por tecnologia e jogos. Embora tenha sido um curso excelente, alguns obstáculos surgiram e acabaram dificultando minha permanência na UERJ. Atualmente, estou cursando Licenciatura em Matemática no IFRJ, unindo as áreas humanas da Educação com a exatidão da Matemática, em uma nova faculdade e curso.
+      Minha trajetória acadêmica iniciou-se no curso de Ciência da Computação, porém enfrentei diversos obstáculos que me impediram de concluí-lo. Atualmente, estou dedicado ao curso de Análise e Desenvolvimento de Sistemas, ao mesmo tempo, em que cultivo um grande amor pela Matemática e pelas Artes. 
       <br><br>
-      Mesmo depois de ter deixado o curso de Ciência da Computação, nunca abandonei a programação e continuamente aplicava meus conhecimentos na vida acadêmica e cotidiana. Isso me inspirou a retornar aos estudos e, atualmente, estou cursando Análise e Desenvolvimento de Sistemas e recomeçando minha carreira como programador Jr. Este site foi criado para compartilhar minha "nova" trajetória de estudos e projetos desenvolvidos nesse processo.
+      Ao longo da minha jornada, tenho percorrido diversos caminhos e vivido experiências variadas, o que me faz lembrar de uma frase inspiradora de Saint-Exupéry: “Quando a gente anda sempre em frente, não pode ir muito longe”. 
     </p>
   </section>
   <!-- / SEÇÃO: BIOGRAFIA -->
@@ -129,11 +129,9 @@
       <div class="separador-curto"></div>
 
       <p class="text-left w-75 mx-auto mb-5 secao-ads-resumo">
-        "O curso de tecnólogo em Análise e Desenvolvimento de Sistemas é uma formação de nível superior voltada para a área de tecnologia da informação. 
+        Desde a infância, tenho interesse por arte, tendo cogitado seguir na área do Desenho Industrial. Porém, escolhi cursar Ciência da Computação como primeira graduação, visto que sou aficionado por tecnologia e jogos. Embora tenha sido um curso excelente, alguns obstáculos surgiram e acabaram dificultando minha permanência na UERJ. Atualmente, estou cursando Licenciatura em Matemática no IFRJ, unindo as áreas humanas da Educação com a exatidão da Matemática, em uma nova faculdade e curso. 
         <br><br>
-        O objetivo do curso é formar profissionais aptos a desenvolver, implementar e gerenciar sistemas de informação em diversas áreas, como comércio, indústria, serviços e governo. Durante o curso, o aluno adquire conhecimentos em linguagens de programação, banco de dados, análise e modelagem de sistemas, redes de computadores, entre outras áreas. 
-        <br><br>
-        Além disso, o curso enfatiza o desenvolvimento de habilidades interpessoais, como liderança, trabalho em equipe e comunicação, fundamentais para o mercado de trabalho. O tecnólogo em Análise e Desenvolvimento de Sistemas está preparado para atuar em diversas posições, desde programador até gerente de projetos de TI, em empresas de todos os portes." — ChatGPT
+        Mesmo após ter deixado o curso de Ciência da Computação, nunca abandonei a programação e continuamente aplicava meus conhecimentos na vida acadêmica e cotidiana. Isso me inspirou a retornar aos estudos e, atualmente, estou cursando Análise e Desenvolvimento de Sistemas e recomeçando minha carreira como programador Jr. Este site foi criado para compartilhar minha “nova” trajetória de estudos e projetos desenvolvidos nesse processo.
       </p>
 
       <!-- PROJETOS -->
