Alteração dos projetos

--- a/index.html
+++ b/index.html
@@ -145,18 +145,18 @@
     <div class="projetos-inicio-linha-2 row position-relative align-items-center mb-5" data-aos="fade-left" data-aos-once="true">
       <div class="col-md-6 order-2 order-md-1">
         <div class="projeto-artigo">
-          <h4 class="projeto-titulo">Projeto Sem Planilha</h4>
+          <h4 class="projeto-titulo">Projeto Aventura Solo</h4>
           <p class="projeto-resumo">
-            O projeto tem como objetivo atender às minhas necessidades pessoais de organização financeira de forma eficiente, 
-            utilizando métodos atuais, padrões de projeto e boas práticas recomendadas pelo mercado.
+            Uma plataforma de livro-jogo como objetivo fornecer uma solução para jogadores e criadores de aventuras solo de RPG, 
+            permitindo a jogabilidade interativa e compartilhamento com outros jogadores. 
           </p>
           <a class="projeto-link" href="https://github.com/euchico/projeto-aventura-solo" target="_blank"><span>Veja Mais</span> <i class="fas fa-angle-right"></i></a>
         </div>
       </div>
 
       <div class="col-md-6 order-1 order-md-2">
-        <img class="img-fluid d-none d-lg-block mb-2" src="assets/img/projeto/projeto-sem-planilha-desktop.png" alt="Projeto Sem Planilha - euChico (Desktop)">
-        <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/projeto/projeto-sem-planilha-mobile.png" alt="Projeto Sem Planilha - euChico (Mobile)">
+        <img class="img-fluid d-none d-lg-block mb-2" src="assets/img/projeto/projeto-aventura-solo-desktop.png" alt="Projeto Aventura Solo - euChico (Desktop)">
+	      <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/projeto/projeto-aventura-solo-mobile.png" alt="Projeto Aventura Solo - euChico (Mobile)">
       </div>
     </div>
     <!-- / Projeto 2 -->
