--- a/portfolio.html
+++ b/portfolio.html
@@ -161,19 +161,20 @@
             <div>
               <span class="d-inline-block mb-2 portfolio-categoria categoria-fullstack">full stack</span>
               <span class="d-inline-block mb-2 portfolio-categoria categoria-dotnet">.net</span>
+              <span class="d-inline-block mb-2 portfolio-categoria categoria-angular">angular</span>
             </div>
-            <h3 class="portfolio-titulo">Sem Planilha</h3>
-            <p class="card-text mb-auto portfolio-resumo">Projeto com objetivo atender às necessidades pessoais de organização financeira.</p>
-            <a class="portfolio-link mt-2" href="https://github.com/euchico/projeto-sem-planilha" target="_blank"> <span>Veja Mais</span> <i class="fas fa-angle-right"></i></a>
+          <h3 class="portfolio-titulo">Aventura Solo</h3>
+          <p class="card-text mb-auto portfolio-resumo">Projeto como objetivo fornecer uma solução para jogadores e criadores de RPG.</p>
+          <a class="portfolio-link mt-2" href="https://github.com/euchico/projeto-aventura-solo" target="_blank"> <span>Veja Mais</span> <i class="fas fa-angle-right"></i></a>
           </div>
           
           <div class="col-auto p-0 d-none d-lg-block">
             <div class="portfolio-thumbnail">
-              <img src="assets/img/portfolio/portfolio-projeto-sem-planilha.jpg" alt="">
+              <img src="assets/img/portfolio/portfolio-projeto-aventura-solo.jpg" alt="">
             </div>
           </div>
         </div>
-      </div>
+        </div>
     </div>
     <!-- / Projeto 2 -->
 
