--- a/sobre.html
+++ b/sobre.html
@@ -160,18 +160,18 @@
         <!-- Projeto 2 -->
         <div class="projetos-sobre row position-relative align-items-center mb-5" data-aos="fade-down" data-aos-once="true">
           <div class="col-lg-6">
-            <img class="img-fluid d-none d-lg-block mb-2" src="assets/img/projeto/projeto-sem-planilha-desktop.png" alt="{{ALT}}">
-            <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/projeto/projeto-sem-planilha-mobile.png" alt="{{ALT}}">
+            <img class="img-fluid d-none d-lg-block mb-2" src="assets/img/projeto/projeto-aventura-solo-desktop.png" alt="{{ALT}}">
+            <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/projeto/projeto-aventura-solo-mobile.png" alt="{{ALT}}">
           </div>
-
+          
           <div class="col-lg-6">
             <div class="projeto-artigo">
-              <h4 class="projeto-titulo">Projeto Sem Planilha</h4>
+              <h4 class="projeto-titulo">Projeto Aventura Solo</h4>
               <p class="projeto-resumo">
-                O projeto tem como objetivo atender às minhas necessidades pessoais de organização financeira de forma eficiente, 
-                utilizando métodos atuais, padrões de projeto e boas práticas recomendadas pelo mercado.
+              Uma plataforma de livro-jogo como objetivo fornecer uma solução para jogadores e criadores de aventuras solo de RPG, 
+              permitindo a jogabilidade interativa de aventuras e compartilhamento com outros jogadores. 
               </p>
-              <a class="projeto-link" href="https://github.com/euchico/projeto-sem-planilha" target="_blank"><span>Veja Mais</span><i class="fas fa-angle-right"></i></a>
+              <a class="projeto-link" href="https://github.com/euchico/projeto-aventura-solo" target="_blank"><span>Veja Mais</span><i class="fas fa-angle-right"></i></a>
             </div>
           </div>
         </div>
